add form-success localozation

--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -1975,8 +1975,8 @@
                         <div class="form-success">
                             <img
                                 src="https://cdn.prod.website-files.com/6630292f13d863327744df39/6657661e6496e44a2d130067_line-rounded-check-circle-white-brix-templates.svg" />
-                            <h3>Thank you</h3>
-                            <p>
+                            <h3 id="form-success-title">Thank you</h3>
+                            <p id="form-success-subtitle">
                                 Thank you for your application, our managers
                                 will contact you soon.
                             </p>
