--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -1855,11 +1855,11 @@
                             Telegram
                         </div>
                     </a>
-                    <img
+                    <!-- <img
                         class="messengers_divider"
                         src="./icons/messengers_divider.svg"
-                        alt="divider" />
-                    <a
+                        alt="divider" /> -->
+                    <!-- <a
                         href="#"
                         target="blank"
                         class="messengers_item viber"
@@ -1874,7 +1874,7 @@
                             id="messengers_label_viber">
                             Viber
                         </div>
-                    </a>
+                    </a> -->
                 </div>
             </section>
         </div>
@@ -2071,7 +2071,7 @@
                                     Telegram
                                 </div>
                             </a>
-                            <img
+                            <!-- <img
                                 class="contacts_divider"
                                 src="./icons/contacts_divider.svg"
                                 alt="divider" />
@@ -2091,7 +2091,7 @@
                                     id="contacts_messenger_viber">
                                     Viber
                                 </div>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
                 </div>
