fix name of work

--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -1253,9 +1253,9 @@
                             <div class="portfolio__content">
                                 <div>
                                     <h1
-                                        style="color: #030314"
-                                        class="portfolio__title nowrap_text">
-                                        Arbitrage Team Landing Page
+                                        style="color: #030314;"
+                                        class="portfolio__title">
+                                        Affiliate Marketing Team Landing Page
                                     </h1>
                                     <ul class="stack">
                                         <li
