--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -2877,6 +2877,9 @@
                                 id="footer_menu_link_work"
                                 >our process</a
                             >
+                            <a href="#price" class="footer_menu-link" id="footer_menu_link_price"
+                                >price</a
+                            >
                             <a
                                 href="#contacts-mobile"
                                 class="footer_menu-link"
