create lang urls

--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -75,7 +75,7 @@
                                 <div class="nav_language_pick" data-lang="es">
                                     Spanish
                                 </div>
-                                <div class="nav_language_pick" data-lang="uk">
+                                <div class="nav_language_pick" data-lang="ua">
                                     Ukrainian
                                 </div>
                                 <div class="nav_language_pick" data-lang="ru">
