--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -78,9 +78,9 @@
                                 <div class="nav_language_pick" data-lang="ua">
                                     Ukrainian
                                 </div>
-                                <div class="nav_language_pick" data-lang="ru">
+                                <!-- <div class="nav_language_pick" data-lang="ru">
                                     Russian
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                         <div class="hamburger">
@@ -2888,7 +2888,7 @@
                             >
                         </div>
                     </div>
-                    <div class="footer_social-media">
+                    <!-- <div class="footer_social-media">
                         <div class="footer_text" id="footer_text_follow">
                             Follow on social media
                         </div>
@@ -2918,7 +2918,7 @@
                                     class="footer_icon" />
                             </a>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="footer_divider"></div>
                 <div class="footer_bottom">
