--- a/puzzle/privacy/index.html
+++ b/puzzle/privacy/index.html
@@ -529,6 +529,6 @@
         <script src="../script.js"></script>
         <script src="../lang.js"></script>
         <script src="../switch-lang.js"></script>
-        <script src="./scroll.js"></script>
+        <script src="../static-header.js"></script>
     </body>
 </html>
