--- a/puzzle/privacy/ua/index.html
+++ b/puzzle/privacy/ua/index.html
@@ -6,7 +6,7 @@
         <title>Document</title>
         <script>
             localStorage.setItem('lang', 'ua');
-            window.location.href = '/privacy/';
+            window.location.href = '/privacy';
         </script>
     </head>
     <body></body>
