add terms of service page

--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -2942,7 +2942,7 @@
                             >Privacy Policy</a
                         >
                         <a
-                            href="#"
+                            href="/terms-of-service"
                             class="footer_menu-document"
                             id="footer_menu_document_terms"
                             >Terms of Service</a
