--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -38,7 +38,7 @@
         <nav class="nav">
             <div class="container">
                 <div class="nav_subwrapper">
-                    <img class="nav_logo" src="./icons/logo.svg" alt="logo" />
+                    <img class="nav_logo" onclick="moveTo('/')" src="./icons/logo.svg" alt="logo" />
                     <nav class="nav_menu">
                         <a
                             href="#services"
@@ -1833,7 +1833,7 @@
                         </div>
 
                         <a
-                            href="#"
+                            href="#contacts-mobile"
                             class="plans_btn"
                             id="plans_btn_puzzle_ua"
                             >Get Started</a
@@ -1977,7 +1977,7 @@
                             >
                         </div>
                         <a
-                            href="#"
+                            href="#contacts-mobile"
                             class="plans_btn"
                             id="plans_btn_puzzle_start"
                             >Get Started</a
@@ -2147,7 +2147,7 @@
                                 >
                             </div>
                             <a
-                                href="#"
+                                href="#contacts-mobile"
                                 class="plans_btn plans_btn-plus"
                                 id="plans_btn_puzzle_plus"
                                 >Get Started</a
@@ -2335,7 +2335,7 @@
                                 >+ VAT</span
                             >
                         </div>
-                        <a href="#" class="plans_btn" id="plans_btn_puzzle_pro"
+                        <a href="#contacts-mobile" class="plans_btn" id="plans_btn_puzzle_pro"
                             >Get Started</a
                         >
                         <div class="plans_divider"></div>
@@ -2865,6 +2865,7 @@
                     <div class="footer_nav">
                         <img
                             class="footer_logo"
+                            onclick="moveTo('/')"
                             src="./icons/logo_footer.svg"
                             alt="logo" />
                         <div class="footer_menu">
@@ -2926,15 +2927,10 @@
                 <div class="footer_divider"></div>
                 <div class="footer_bottom">
                     <div class="footer_text" id="footer_text_copyright">
-                        © Puzzledesire, 2024. All right reserved.
+                        &copy; Puzzledesire, 2024-2025. All right reserved.
                     </div>
                     <div class="footer_documents">
-                        <a
-                            href="#"
-                            class="footer_menu-document"
-                            id="footer_menu_document_cookies"
-                            >Cookies Settings</a
-                        >
+                        
                         <a
                             href="/privacy"
                             class="footer_menu-document"
