--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -1819,11 +1819,11 @@
                             id="plans_subtitle_puzzle_ua">
                             A fully functional website to support the business of Ukrainian entrepreneurs abroad. For those who have opened or plan to open their small business abroad.
                         </div>
-                        <div
+                        <!-- <div
                             class="plans_subtitle"
                             id="plans_subtitle_puzzle_ua2">
                             Optional installments with a first payment of 200€ + VAT and 50€ + VAT per month for half a year
-                        </div>
+                        </div> -->
                         
                         <div class="plans_price_mobile" id="plans_price_puzzle_ua_mobile">
                             500€
